Wrapped MainLayout with correct styling, to further add content in various pages

--- a/src/Components/MainLayout/MainLayout.module.css
+++ b/src/Components/MainLayout/MainLayout.module.css
@@ -1,8 +1,8 @@
-.mainContainer {
+.contentContainer {
     display: flex;
   }
 
   .mainContent {
     flex: 1; /* Allow the main content to expand and fill the available space */
-    background-color: rgb(183, 183, 252)
+    width: 100%;
   }
