--- a/src/Components/Pages/Notifications/Notifications.module.css
+++ b/src/Components/Pages/Notifications/Notifications.module.css
@@ -9,12 +9,3 @@
   h2 {
     color: black;
   }
-
-
-  .notificationContent {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    background-color: #84e8ef;
-    top: 100px;
-  }
